# checkmate

./: Cargo.toml  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  about.toml  checkmate.example.yaml  deny.toml
.github/workflows/: ci.yml
.tools/: cargo-about-markdown-template.hbs
checkmate/: Cargo.toml
checkmate/src/: cli.rs  config.rs  de.rs  main.rs
checkmate/src/config/: folders.rs  hosts.rs  rulesets.rs
checkmk-client/: Cargo.toml
checkmk-client/src/: changes.rs  folders.rs  hosts.rs  lib.rs  models.rs  rules.rs
