[package]
name = "checkmate"
version = "0.1.0"
edition = "2021"
authors = [
  "Pit Kleyersburg <pit.kleyersburg@kaiserkraft.com>",
  "KAISER+KRAFT EUROPA GmbH <webshop-devops@kaiserkraft-europa.de>"
]
license = "Apache-2.0"

[dependencies]
checkmk-client = { path = "../checkmk-client/" }
color-eyre = "0.6.2"
clap = { version = "4.3.19", features = ["derive", "env"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_yaml = "0.9.25"
