[package]
name = "checkmate"
version = "0.1.0"
edition = "2021"
authors = [
  "Pit Kleyersburg <pit.kleyersburg@takkt.com>",
  "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>"
]
license = "Apache-2.0"

publish = false

[dependencies]
checkmk-client = { path = "../checkmk-client/" }
color-eyre = "0.6.3"
clap = { version = "4.5.20", features = ["derive", "env", "wrap_help"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
