[package]
name = "checkmate"
version = "0.1.0"
edition = "2021"
authors = [
  "Pit Kleyersburg <pit.kleyersburg@takkt.com>",
  "TAKKT Industrial & Packaging GmbH <webshop-devops@kaiserkraft-europa.de>"
]
license = "Apache-2.0"

publish = false

[dependencies]
checkmk-client = { path = "../checkmk-client/" }
clap = { version = "4.5.48", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
