[package]
name = "checkmk-client"
version = "0.1.0"
edition = "2021"
authors = [
  "Pit Kleyersburg <pit.kleyersburg@kaiserkraft.com>",
  "KAISER+KRAFT EUROPA GmbH <webshop-devops@kaiserkraft-europa.de>"
]
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
